--- a/style/style.css
+++ b/style/style.css
@@ -1,55 +1,49 @@
 @import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat&display=swap');
 
-    
-
 :root{
     --color-primario: #0C0C0C;
     --color-secundario: #D6EFD8;
     --color-terciario: #508D4E;
     --color-hover: #272727;
 
-    --fuente-montserrat: 'Montserrat', sans serif;
-    --fuente-Krona: 'Krona', sans serif;
+    --fuente-montserrat: 'Montserrat', sans-serif;
+    --fuente-Krona: 'Krona', sans-serif;
 }
 
 * {
     padding: 0;
-    margin:0;
+    margin: 0;
 }
 
-body{
+body {
     box-sizing: border-box;
     background-color: var(--color-primario);
     color: var(--color-secundario);
 }
 
 header {
-padding: 2% 0% 2% 15%;
-background-color: var(--color-terciario);
-
+    padding: 2% 0% 2% 15%;
+    background-color: var(--color-terciario);
 }
 
 .header__menu {
-display: flex;
-gap: 10px;
+    display: flex;
+    gap: 10px;
 }
 
-.header__menu__link{
+.header__menu__link {
     padding: 0% 0% 0% 1%;
     font-family: var(--fuente-montserrat);
     font-size: 1.5rem;
     font-weight: 600;
     color: var(--color-primario);
     text-decoration: none;
-   
 }
 
 .header__menu__link:hover {
     cursor: pointer;
     color: var(--color-secundario);
 }
-
-
 
 .presentacion {
     padding: 6% 15%;
@@ -59,28 +53,28 @@ gap: 10px;
     gap: 82px;
 }
 
-.presentacion__contenido{
+.presentacion__contenido {
     width: 50%;
     display: flex;
     flex-direction: column;
     gap: 40px;
 }
 
-.presentacion__contenido__titulo{
+.presentacion__contenido__titulo {
     font-size: 2.25rem;
     font-family: var(--fuente-Krona);
 }
 
 .titulo-destaque {
-    color: var(--color-terciario); 
+    color: var(--color-terciario);
 }
 
-.presentacion__contenido__texto{
+.presentacion__contenido__texto {
     font-size: 1.5rem;
     font-family: var(--fuente-montserrat);
 }
 
-.presentacion__enlaces{
+.presentacion__enlaces {
     display: flex;
     justify-content: space-between;
     flex-direction: column;
@@ -88,13 +82,13 @@ gap: 10px;
     gap: 32px;
 }
 
-.presentacion__enlaces__subtitulo{
+.presentacion__enlaces__subtitulo {
     font-family: var(--fuente-Krona);
     font-size: 1.5rem;
-    font-weight: 400px;
+    font-weight: 400;
 }
 
-.presentacion__enlaces__link{
+.presentacion__enlaces__link {
     width: 50%;
     color: var(--color-secundario);
     text-align: center;
@@ -109,49 +103,43 @@ gap: 10px;
     justify-content: center;
     gap: 10px;
     box-shadow: 5px 5px 5px var(--color-terciario);
-
 }
 
-.presentacion__enlaces__link:hover{
-    
+.presentacion__enlaces__link:hover {
     background-color: var(--color-hover);
 }
 
-.presentacion__imagen{
-    padding: flex;
+.presentacion__imagen {
     width: 50%;
     border-radius: 2%;
-    box-shadow: 10px 5px 5px var(--color-terciario);    
+    box-shadow: 10px 5px 5px var(--color-terciario);
 }
 
-footer{
+footer {
     background-color: var(--color-terciario);
     padding: 24px;
     color: var(--color-secundario);
     text-align: center;
     font-family: var(--fuente-montserrat);
     font-size: 1.5rem;
-    font-weight: 400;    
-
+    font-weight: 400;
 }
 
-@media (max-width: 1200px){
-
-    .header{
-        padding: 10%;   
+@media (max-width: 1200px) {
+    .header {
+        padding: 10%;
     }
 
-    .header__menu{
+    .header__menu {
         justify-content: center;
     }
 
-    .presentacion{
+    .presentacion {
         flex-direction: column-reverse;
         padding: 5%;
     }
-   .presentacion__contenido{
-    width: auto;
-   }
 
- 
+    .presentacion__contenido {
+        width: auto;
+    }
 }
